--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Tyler Chen's Blog</title>
 	<link rel="stylesheet" href="./assets/css/bootstrap.css" />
 	<script type="text/javascript" src="./assets/js/markdown.js"></script>
-	<script type="text/javascript" src="./assets/js/jquery-1.8.0.min.js"></script>
+	<script type="text/javascript" src="./assets/js/jquery.js"></script>
 	<script type="text/javascript" src="./assets/js/main.js"></script>
 </head>
 <body class="topBarDisabled">
